FIXED: Collapsed new sidebar.

--- a/css/userChrome-vibrancy.css
+++ b/css/userChrome-vibrancy.css
@@ -2513,6 +2513,9 @@ sidebar-main[expanded] #tabbrowser-tabs[orient=vertical] #tabbrowser-arrowscroll
   sidebar-main[expanded] #tabbrowser-tabs[orient=vertical] > #vertical-tabs-newtab-button > .toolbarbutton-text {
     transform: translateX(8px);
   }
+  #tabbrowser-tabs[orient=vertical] #tabbrowser-arrowscrollbox {
+    width: 100% !important;
+  }
   #tabbrowser-tabs[orient=vertical] .tab-content,
 #tabbrowser-tabs[orient=vertical] .tabbrowser-tab:is([image], [pinned]) > .tab-stack > .tab-content[attention]:not([selected]),
 #tabbrowser-tabs[orient=vertical] .tabbrowser-tab > .tab-stack > .tab-content[pinned][titlechanged]:not([selected]) {
